--- a/main.css
+++ b/main.css
@@ -248,9 +248,10 @@ section:nth-child(4) h2 {
 }
 
 .card-donate button:hover {
-  color: #544b3c;
-  background-color: rgba(255, 255, 255, 0.486);
+  color: #010101;
+  background-color: rgba(255, 255, 255, 0.668);
   transition: all .2s;
+  font-weight: 900;
 
 
 }
@@ -314,6 +315,7 @@ section:nth-child(4) h2 {
   display: flex;
   justify-content: center;
   gap: 250px;
+  padding: 20px 0;
 }
 
 .footer-copyright {
@@ -323,6 +325,7 @@ section:nth-child(4) h2 {
 .crds-footr h2 {
   color: white;
   font-size: 2rem;
+  padding-bottom: 10px;
 }
 
 .crds-footr p {
@@ -332,7 +335,7 @@ section:nth-child(4) h2 {
 }
 
 .footer-copyright p {
-  padding-top: 20px;
+  padding: 30px 0;
   text-align: center;
   font-size: 1.2rem;
   color: rgba(255, 255, 255, 0.522);
